--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "dev:host": "vite --config dev-host.js"
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
