--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "livewire/livewire": "^3.6",
         "maatwebsite/excel": "^3.1",
         "spatie/browsershot": "^5.0",
+        "spatie/laravel-backup": "^9.3",
         "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
